# yet-another-figma-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  codecov.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  flaky-test-detection.yml  publish.yml  release-please.yml
.qlty/: qlty.toml
docs/design/: initial-design-notes.md
docs/guides/: figma-api-token.md  figma-client.md  mcp-inspector.md
src/yet_another_figma_mcp/: __init__.py  cli.py  server.py
src/yet_another_figma_mcp/cache/: __init__.py  index.py  store.py
src/yet_another_figma_mcp/cli/: __init__.py  app.py  cache.py  i18n.py  serve.py  status.py
src/yet_another_figma_mcp/figma/: __init__.py  client.py  exceptions.py
src/yet_another_figma_mcp/tools/: __init__.py  handlers.py
tests/: __init__.py  cache_test.py  conftest.py  figma_client_test.py  tools_test.py
tests/cache/: index_test.py  store_test.py
tests/cli/: app_test.py  cache_test.py  i18n_test.py  serve_test.py  status_test.py
tests/figma/: client_test.py
tests/fixtures/: sample_design_system.json
tests/integration/: cache_flow_test.py  mcp_server_test.py
tests/tools/: handlers_test.py
