[project]
name = "yet-another-figma-mcp"
dynamic = ["version"]
description = "Figma ファイルをローカルキャッシュし MCP サーバーとして提供する軽量ツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "yk / k.yamada" }
]
keywords = ["figma", "mcp", "cache", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
yet-another-figma-mcp = "yet_another_figma_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/yk-lab/yet-another-figma-mcp"
Repository = "https://github.com/yk-lab/yet-another-figma-mcp"
Issues = "https://github.com/yk-lab/yet-another-figma-mcp/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yet_another_figma_mcp/_version.py"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]

[tool.ruff.lint.isort]
known-first-party = ["yet_another_figma_mcp"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = false  # disabled due to mcp decorator type handling differences
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pre-commit-uv>=4.2.0",
]
