[project]
name = "yet-another-figma-mcp"
dynamic = ["version"]
description = "Figma ファイルをローカルキャッシュし MCP サーバーとして提供する軽量ツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "yk / k.yamada" }
]
keywords = ["figma", "mcp", "cache", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli,rich]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
yet-another-figma-mcp = "yet_another_figma_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/yk-lab/yet-another-figma-mcp"
Repository = "https://github.com/yk-lab/yet-another-figma-mcp"
Issues = "https://github.com/yk-lab/yet-another-figma-mcp/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yet_another_figma_mcp/_version.py"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
ignore = [
    "RUF002",  # Allow fullwidth characters in Japanese docstrings
    "TRY003",  # Allow long exception messages in custom exceptions
]

[tool.ruff.lint.isort]
known-first-party = ["yet_another_figma_mcp"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src/yet_another_figma_mcp", "tests"]
reportUnusedFunction = "none"  # MCP decorator registered functions are flagged incorrectly
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.coverage.run]
source = ["src/yet_another_figma_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
    "pre-commit-uv>=4.2.0",
    "pytest-xdist>=3.8.0",
    "pytest-randomly>=4.0.1",
    "pytest-flakefinder>=1.1.0",
    "pytest-mock>=3.15.1",
]
